# caliber-test

./: .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_READINESS.md  DEVELOPMENT_STATE.md  LICENSE  README.md  README_annotation.md  STORAGE_MODULE_SUMMARY.md  campaign_data.xlsx  docker-compose.yml  package-lock.json  requirements.txt  test_alembic_imports.py  test_all_modules.py  test_base_model.py  test_db_config.py  test_env.py  test_model_example.py  test_models.py  test_redis_config.py  test_storage.py  test_storage_comprehensive.py
caliber/backend/: 12E Background task processing.txt  Dockerfile  alembic.ini  create_demo_user.py  main.py  pyproject.toml  requirements.txt  scoring_optimization.py
caliber/backend/ai_service/: chatbot.py  config.py  controllers.py  insight_generator.py  prompt_builder.py  routes.py  schemas.py
caliber/backend/auth_service/: __init__.py  dependencies.py  example_usage.py  firebase_verify.py  routes.py  schemas.py
caliber/backend/campaign_service/: controllers.py  routes.py  schemas.py
caliber/backend/common/: __init__.py  cache.py  deps.py  exceptions.py  logging.py  schemas.py  utils.py
caliber/backend/config/: __init__.py  database.py  redis.py  settings.py
caliber/backend/db/: __init__.py  base.py  models.py
caliber/backend/report_service/: exports.py  pdf_generator.py  routes.py  schemas.py  storage.py  uploads.py
caliber/backend/scoring_service/: config.py  controllers.py  enhanced_normalize.py  enhanced_preprocess.py  enhanced_scoring_engine.py  enhanced_weighting.py  explain.py  normalize.py  outliers.py  (+7 more)
(+245 files in other folders)
